# regis

./: .gitignore  Cargo.toml  DISCLOSURE.md  README.md  todo.md
client/: Cargo.toml  client.sln
client/Regis/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Regis.csproj
client/RegisCli/: Program.cs  RegisCli.csproj
client/RegisCore/: MessageManager.cs  Network.cs  RegisCore.csproj  SavedConnection.cs
client/regis-cli/: regis-cli.csproj
client/regis-core/: Network.cs
common/: Cargo.toml
common/src/: auth.rs  config.rs  err.rs  error.rs  lib.rs  loc.rs  lock.rs  log.rs  metric.rs  msg.rs  net.rs  task_util.rs  version.rs
common/src/client/: mod.rs
common/src/regisc/: backend.rs  conn.rs
common/src/usr/: mod.rs  user.rs
lib/backend/: Cargo.toml
lib/backend/src/: config.rs  err.rs  lib.rs  loc.rs  tool.rs
lib/common/: Cargo.toml
lib/common/src/: config.rs  lib.rs  loc.rs  lock.rs  log.rs  msg.rs  storage.rs  task_util.rs
lib/exdisj/: Cargo.toml
lib/exdisj/src/: config.rs  lib.rs  metric.rs  storage.rs  task_util.rs
lib/regisd_com/src/: msg.rs
other/: Encryption.key
regis/: Cargo.toml
regis-cli/: Cargo.toml
regis-cli/src/: cli.rs  main.rs  tool.rs
regis-gui/: Cargo.toml
regis-gui/src/: cli.rs  config.rs  tool.rs
regis-gui/src/gui/: ip4entry.rs  mod.rs
regis-gui/src/ui/regis-ui/: main.blp
regis/regis_cli/: Cargo.toml
regis/regis_cli/src/: config.rs  err.rs  tool.rs
regis/src/: cli.rs  config.rs  err.rs  gui.rs  main.rs  tool.rs
regis/src/gui/: mod.rs
regis/src/ui/regis-ui/: main.blp  settings
regis/swift/Regis/: ConnectView.swift  RegisApp.swift
regis/swift/Regis.xcodeproj/: project.pbxproj
regis/swift/Regis/Bridge/: Connection.h  ConnectionBridge.swift  Regis-Bridging-Header.h
regis/swift/Regis/Models/: KnownHost.swift
regis/swift/Regis/Views/: ConnectView.swift  Homepage.swift  IPConn.swift  MainView.swift
regis/swift/RegisTests/: RegisTests.swift
regis/swift/RegisUITests/: RegisUITests.swift  RegisUITestsLaunchTests.swift
regis/windows/: Cargo.toml
regis/windows/src/: main.rs
regisc/: Cargo.toml
regisc-cli/: Cargo.toml
regisc-cli/src/: main.rs  work.rs
regisc-gui/: Cargo.toml
regisc/src/: main.rs  work.rs
regisc/src/cli/: mod.rs
regisc/src/core/: backend.rs  conn.rs  mod.rs  runtime.rs
regisd/: Cargo.toml  README.md  user-man-test.json
regisd/src/: config.rs  connect.rs  failure.rs  loc.rs  locations.rs  main.rs  message.rs  metric.rs  msg.rs  orchestra.rs  sess.rs  setup.rs
regisd/src/auth/: app.rs  encrypt.rs  jwt.rs  man.rs  mod.rs  sess.rs  user.rs  user_man.rs  user_serde.rs
regisd/src/auth/encrypt/: aes.rs  mod.rs  rsa.rs
regisd/src/auth/stream/: aes.rs  aes_prelude.rs  err.rs  mod.rs  rsa.rs
regisd/src/connect/: broad.rs  broadcast.rs  client.rs  console.rs  console_worker.rs  mod.rs
regisd/src/metric/: collect.rs  io.rs  mod.rs  storage.rs  tables.sql
regisd/src/metric/collect/: linux.rs  mod.rs  prelude.rs
regisd/src/sess/: auth.rs  keys.rs
regisd_com/: Cargo.toml
regisd_com/src/: lib.rs  loc.rs  msg.rs
regisg/: Cargo.toml
script/: README.md  compile.bash  daemon_check.bash  establish_user.bash  install.bash  regisd.service  stress-ng.service
script/bundle/: create_user.bash  insert_cron.bash  remove_cron.bash  stress.bash
script/compiled/: regisc  regisd  regisg
server/: Cargo.toml  Dockerfile
server-lib/: Cargo.toml
server-man/: Cargo.toml
server/src/: Daemon Design.md  config.rs  connect.rs  core.rs  error.rs  locations.rs  log.rs  main.rs  message.rs  metric.rs  orchestra.rs  task_util.rs
server/src/connect/: broad.rs  client.rs  console.rs
server/src/connect/client/: mgnt.rs
server/src/connect/console/: mgnt.rs
server/src/metric/: collect.rs  mgnt.rs
tests/: handshakes.rs
