[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
exdisj = { path="../../exdisj-rs", features = ["json"] }

clap = { version = "*", features=["derive"] }
chrono = { version = "0.4.40", features=["serde"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = "1.44.1"

base64 = "0.22.1"
lazy_static = "1.5.0"

rand_core = "0.6.4"
rand = "0.8.5"
rsa_ext = { version = "0.1.2", features = ["serde"] }

keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "sync-secret-service"]}
