[package]
name = "regis-gui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "regis-gui"
path = "src/main.rs"

[dependencies]
chrono = "0.4.40"
clap = {version="4.5.32", features=["derive"]}
common = {path="../common"}
lazy_static = "1.5.0"
exdisj = { path = "../../exdisj-rs", features=["json", "async", "auth"]}
serde = { version= "1.0.219", features=["derive"]}
serde_json = "1.0.140"
tokio = "1.44.1"
rand_core = "0.6.4"
rand = "0.8.5"
rsa_ext = { version = "0.1.2", features = ["serde"] }
gtk4 = { version = "0.10.1", package = "gtk4", features = ["v4_10"] }
glib = "*"
