[package]
name = "regis"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "regis"
path = "src/main.rs"

[dependencies]
chrono = "0.4.40"
clap = {version="4.5.32", features=["derive"]}
common = {path="../common"}
lazy_static = "1.5.0"
serde = { version= "1.0.219", features=["derive"]}
serde_json = "1.0.140"
tokio = "1.44.1"
