[package]
name = "regisc"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive"] }
common = { path = "../common"}
regisd_com = { path = "../regisd_com" }
serde = {version = "1.0.218", features = ["derive"]}
serde_json = "1.0.139"
tokio = {version = "1.44.0", features = ["full"]}
