[package]
name = "regisd"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "regisd"
path = "src/main.rs"

[dependencies]
exdisj = { path="../../exdisj-rs", features=["async", "json"] }
common = { path="../common" }

serde = {version = "1.0.218", features = ["derive"]}
serde_json = "1.0.139"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.5.0"
chrono = { version = "0.4.40", features=["serde"] }
clap = { version = "4.5.32", features = ["derive"] }
daemonize = "0.5.0"
aes-gcm = "0.10.3"
rsa_ext = { version = "0.1.2", features = ["serde"] }
sha2 = "0.10.9"
jwt = "0.16.0"
base64 = "0.22.1"
hmac = "0.12.1"
rand_core = "0.6.4"
rand = "0.8.5"
once_cell = "1.21.3"
