[package]
name = "regisd"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "regisd"
path = "src/main.rs"

[dependencies]
exdisj = { path="../../exdisj-rs", features=["async", "json", "auth"] }
common = { path="../common" }

serde = {version = "1.0.218", features = ["derive"]}
serde_json = "1.0.139"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4.40", features=["serde"] }
clap = { version = "4.5.32", features = ["derive"] }
daemonize = "0.5.0"

jwt = "0.16.0"
base64 = "0.22.1"
hmac = "0.12.1"
rand_core = "0.6.4"
rand = "*"
sha2 = "*"
aes-gcm = "*"
rsa_ext = { version = "*", features = ["serde"] }

once_cell = "1.21.3"
lazy_static = "1.5.0"
