[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "regisd"
path = "src/main.rs"

[dependencies]
common = { path="../common"}
server-lib = { path="../server-lib"}
serde = {version = "1.0.218", features = ["derive"]}
serde_json = "1.0.139"
rusqlite = { version = "0.33.0", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
lazy_static = "1.5.0"
chrono = "0.4.40"
